<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/dateInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/date_input"
        android:inputType="date"/>
    <EditText
        android:id="@+id/timeInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/time_input"
        android:inputType="time"/>
    <EditText
        android:id="@+id/distanceInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/distance_input"
        android:inputType="numberDecimal"/>
    <EditText
        android:id="@+id/speedInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/distance_input"
        android:inputType="numberDecimal"/>
    <EditText
        android:id="@+id/cadenceInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/cadence_input"
        android:inputType="number"/>
    <EditText
        android:id="@+id/commentInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/comment_input"
        android:inputType="textShortMessage"/>

</LinearLayout>
